# DateTimePy

./: README.md  dateTime.py  default.nix  flake.nix  main.py  pyproject.toml  requirements.txt  result  service.nix  setup.py
datetime-service-0.1.0/: main.py
datetime_service/: main.py
python-service/: datetime_service.py
systemd/: datetime-service.nix
tests/: test_main.py
