[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datetime-service"
version = "0.1.0"
dependencies = [
    "humanize",
    "arrow"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["datetime_service*"]

[project.scripts]
datetime-service = "datetime_service.main:main"
